--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "axios": "^0.19.2",
     "babel-plugin-component": "^1.1.1",
     "mint-ui": "^2.2.13",
+    "node-sass": "^4.13.1",
+    "query-string": "^6.11.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
