--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "babel-plugin-component": "^1.1.1",
+    "babel-polyfill": "^6.26.0",
+    "es6-promise": "^4.2.8",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.13.1",
     "query-string": "^6.11.1",
